--- a/analise1.html
+++ b/analise1.html
@@ -41,7 +41,7 @@
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
             <!-- Logo/Nome do Site -->
             <a href="index.html" class="mb-4 md:mb-0">
-                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="Logo F5 Games" class="h-12 w-auto rounded-md">
+                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="[Image of Logo F5 Games]" class="h-12 w-auto rounded-md">
             </a>
             <!-- Menu de Navegação -->
             <nav>
@@ -49,7 +49,7 @@
                     <li><a href="index.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Início</a></li>
                     <li><a href="noticias.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Notícias</a></li>
                     <li><a href="analises.html" class="text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
-                    <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">E-Sports</a></li>
+                    <li><a href="promocoes.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Promoções</a></li>
                     <li><a href="contato.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Contato</a></li>
                 </ul>
             </nav>
@@ -76,8 +76,8 @@
                         Seu navegador não suporta a tag de vídeo.
                     </video>
                 </div>
-                <!-- Imagem do jogo REMATCH - ATUALIZADA -->
-                <img src="https://i.ibb.co/V0QTGjfg/header.jpg" alt="Gameplay de REMATCH" class="w-full max-w-2xl mx-auto rounded-lg shadow-lg">
+                <!-- Imagem do jogo REMATCH -->
+                <img src="https://placehold.co/800x450/60A5FA/fff?text=REMATCH+GAMEPLAY" alt="[Image of REMATCH Gameplay]" class="w-full max-w-2xl mx-auto rounded-lg shadow-lg">
                 <p class="text-gray-400 text-sm mt-2">Fonte da Imagem e Vídeo: Rematch / Steam</p>
             </div>
 
