--- a/contato.html
+++ b/contato.html
@@ -25,7 +25,7 @@
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
             <!-- Logo/Nome do Site -->
             <a href="index.html" class="mb-4 md:mb-0">
-                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="Logo F5 Games" class="h-12 w-auto rounded-md">
+                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="[Image of Logo F5 Games]" class="h-12 w-auto rounded-md">
             </a>
             <!-- Menu de Navegação -->
             <nav>
@@ -34,7 +34,8 @@
                     <!-- Link "Notícias" apontando para noticias.html -->
                     <li><a href="noticias.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Notícias</a></li>
                     <li><a href="analises.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
-                    <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">E-Sports</a></li>
+                    <!-- Link "Promoções" agora aponta para promocoes.html -->
+                    <li><a href="promocoes.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Promoções</a></li>
                     <!-- Link "Contato" na própria página de contato -->
                     <li><a href="contato.html" class="text-blue-400 text-lg font-semibold transition duration-300">Contato</a></li>
                 </ul>
@@ -60,7 +61,7 @@
         </section>
     </main>
 
-    <!-- Rodapé do Site (Copiado do index.html para consistência) -->
+    <!-- Rodapé do Site (Copiado para consistência) -->
     <footer class="bg-gray-900 py-8 mt-12">
         <div class="container mx-auto px-4 text-center text-gray-400">
             <p>&copy; 2025 F5 Games. Todos os direitos reservados.</p>
