--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <!-- Logo/Nome do Site -->
             <!-- Link do logo para a página inicial -->
             <a href="index.html" class="mb-4 md:mb-0">
-                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="Logo F5 Games" class="h-12 w-auto rounded-md">
+                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="[Image of Logo F5 Games]" class="h-12 w-auto rounded-md">
             </a>
             <!-- Menu de Navegação -->
             <nav>
@@ -162,7 +162,8 @@
                     <!-- Link "Notícias" para a página de notícias -->
                     <li><a href="noticias.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Notícias</a></li>
                     <li><a href="analises.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
-                    <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">E-Sports</a></li>
+                    <!-- Link "Promoções" agora aponta para promocoes.html -->
+                    <li><a href="promocoes.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Promoções</a></li>
                     <!-- Link "Contato" para a página de contato -->
                     <li><a href="contato.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Contato</a></li>
                 </ul>
@@ -210,7 +211,7 @@
                 <!-- Destaque 2 (The Alters - Notícia 2) -->
                 <article class="carousel-slide bg-gray-800 rounded-lg overflow-hidden">
                     <div class="md:w-1/2">
-                        <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="Capa do jogo The Alters" class="w-full h-full object-cover rounded-tl-lg md:rounded-bl-lg md:rounded-tr-none">
+                        <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="[Image of The Alters]" class="w-full h-full object-cover rounded-tl-lg md:rounded-bl-lg md:rounded-tr-none">
                     </div>
                     <div class="md:w-1/2 p-6 flex flex-col justify-center">
                         <h2 class="text-3xl md:text-4xl font-bold mb-4 text-white leading-tight">
@@ -266,7 +267,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Card de Notícia 1 - Promoção KRAFTON -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/d97706/fff?text=KRAFTON+Sale" alt="Promoção KRAFTON" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/d97706/fff?text=KRAFTON+Sale" alt="[Image of KRAFTON Sale]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Promoção KRAFTON na Steam: Grandes Descontos em PUBG, Subnautica e Mais!</a>
@@ -280,7 +281,7 @@
 
                 <!-- Card de Notícia 2 - The Alters: com imagem e link para a PÁGINA DEDICADA -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="Capa do jogo The Alters" class="w-full h-48 object-cover">
+                    <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="[Image of The Alters]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="noticias2.html" class="hover:text-blue-400 transition duration-300">The Alters: O Trailer de Sobrevivência e Múltiplas Realidades Chega Hoje!</a>
@@ -288,13 +289,15 @@
                         <p class="text-gray-400 text-base mb-4">
                             Mergulhe em uma jornada existencial onde Jan Dolski deve criar "alteres" de si mesmo para sobreviver em um planeta hostil. Suas escolhas moldam realidades!
                         </p>
-                        <a href="noticias2.html" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
+                        <a href="noticias2.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 self-start">
+                            Leia a Notícia Completa &rarr;
+                        </a>
                     </div>
                 </article>
 
                 <!-- Card de Notícia 3 - AGORA LINKA PARA ANALISE1.HTML E COM A IMAGEM CORRETA -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://i.ibb.co/V0QTGjfg/header.jpg" alt="Gameplay de REMATCH" class="w-full h-48 object-cover">
+                    <img src="https://i.ibb.co/V0QTGjfg/header.jpg" alt="[Image of REMATCH]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="analise1.html" class="hover:text-blue-400 transition duration-300">Análise de Jogo: REMATCH – Minhas Primeiras Impressões!</a>
@@ -309,7 +312,7 @@
                 <!-- Card de Notícia 4 - PRÓXIMOS LANÇAMENTOS (Alterado para "lancamentos.html") -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
                     <!-- Imagem para Próximos Lançamentos -->
-                    <img src="https://placehold.co/600x338/5A8DED/fff?text=PRÓXIMOS+LANÇAMENTOS" alt="Próximos Lançamentos de Jogos" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/5A8DED/fff?text=PRÓXIMOS+LANÇAMENTOS" alt="[Image of Próximos Lançamentos]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="lancamentos.html" class="hover:text-blue-400 transition duration-300">Confira os Próximos Lançamentos Mais Aguardados!</a>
@@ -321,31 +324,31 @@
                     </div>
                 </article>
 
-                <!-- Card de Notícia 5 - Vazamento de informações -->
+                <!-- Card de Notícia 5 - Promoção especial (Atualizado para ser uma promoção) -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/D946EF/fff?text=Vazamento+Exclusivo" alt="Vazamento de Jogo" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/D946EF/fff?text=Promoção+Especial" alt="[Image of Promoção Especial]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <a href="https://f5games.com.br/noticia/vazamento-exclusivo-jogo" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Vazamento Exclusivo Revela Detalhes de Novo Título de Ação e Aventura</a>
+                            <a href="promocoes.html" class="hover:text-blue-400 transition duration-300">Promoção Especial: Desconto em Jogos Indie Selecionados!</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
-                            Imagens e informações confidenciais sobre um jogo ainda não anunciado agitam a comunidade gamer.
+                            Descubra pérolas independentes com descontos incríveis. Uma chance de apoiar e se divertir!
                         </p>
-                        <a href="https://f5games.com.br/noticia/vazamento-exclusivo-jogo" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
+                        <a href="promocoes.html" class="text-blue-400 hover:underline font-medium">Ver Promoção &rarr;</a>
                     </div>
                 </article>
 
-                <!-- Card de Notícia 6 - Recorde de E-Sports -->
+                <!-- Card de Notícia 6 - Bundle Gamer (Atualizado para ser uma promoção) -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/059669/fff?text=Recorde+E-Sports" alt="Recorde em E-Sports" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/059669/fff?text=BUNDLE+GAMER" alt="[Image of Bundle Gamer]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Campeonato Mundial de E-Sports Bate Recorde de Audiência Global</a>
+                            <a href="promocoes.html" class="hover:text-blue-400 transition duration-300">Bundle Gamer da Semana: Pacotes de Jogos com Super Desconto!</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
-                            O cenário competitivo continua crescendo, com milhões de espectadores acompanhando as finais de [Nome do Jogo].
+                            Garanta vários jogos por um preço único. Uma coleção para todos os gostos!
                         </p>
-                        <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
+                        <a href="promocoes.html" class="text-blue-400 hover:underline font-medium">Ver Bundle &rarr;</a>
                     </div>
                 </article>
             </div>
@@ -380,7 +383,6 @@
                 if (index === 0) {
                     dot.classList.add('active');
                 }
-                dot.addEventListener('click', () => showSlide(index));
                 indicatorsContainer.appendChild(dot);
             });
 
