--- a/lancamentos.html
+++ b/lancamentos.html
@@ -189,7 +189,7 @@
             <!-- Seção esquerda do cabeçalho: Logo e Botão do Calendário -->
             <div class="header-left-section">
                 <a href="index.html" class="mb-0">
-                    <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="Logo F5 Games" class="h-12 w-auto rounded-md">
+                    <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="[Image of Logo F5 Games]" class="h-12 w-auto rounded-md">
                 </a>
                 <button id="calendarToggleBtn" class="calendar-toggle-btn">
                     <svg class="w-5 h-5 inline-block mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
@@ -203,7 +203,8 @@
                     <li><a href="index.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Início</a></li>
                     <li><a href="noticias.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Notícias</a></li>
                     <li><a href="analises.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
-                    <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">E-Sports</a></li>
+                    <!-- ALTERADO: O link "E-Sports" agora é "Promoções" e aponta para promocoes.html -->
+                    <li><a href="promocoes.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Promoções</a></li>
                     <li><a href="contato.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Contato</a></li>
                 </ul>
             </nav>
