--- a/noticias.html
+++ b/noticias.html
@@ -35,7 +35,8 @@
                     <!-- Link "Notícias" na própria página de notícias (pode ser útil para indicar a página atual) -->
                     <li><a href="noticias.html" class="text-blue-400 text-lg font-semibold transition duration-300">Notícias</a></li>
                     <li><a href="analises.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
-                    <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">E-Sports</a></li>
+                    <!-- Link "Promoções" agora aponta para promocoes.html -->
+                    <li><a href="promocoes.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Promoções</a></li>
                     <li><a href="contato.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Contato</a></li>
                 </ul>
             </nav>
@@ -47,7 +48,7 @@
         <section>
             <h1 class="text-4xl font-bold text-white mb-8 text-center">Todas as Notícias</h1>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Card de Notícia 1 - Promoção KRAFTON -->
+                <!-- Card de Notícia 1 - Promoção KRAFTON (Mantido, mas considere que o conteúdo de promoções idealmente estaria em promocoes.html) -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
                     <img src="https://placehold.co/600x338/d97706/fff?text=KRAFTON+Sale" alt="[Image of KRAFTON Sale]" class="w-full h-48 object-cover">
                     <div class="p-6">
@@ -105,31 +106,31 @@
                     </div>
                 </article>
 
-                <!-- Card de Notícia 5 - Vazamento de informações -->
+                <!-- Card de Notícia 5 - Promoção genérica (Agora com link para promocoes.html) -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/D946EF/fff?text=Vazamento+Exclusivo" alt="[Image of Vazamento de Jogo]" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/D946EF/fff?text=NOVA+PROMOÇÃO" alt="[Image of Nova Promoção]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <a href="https://f5games.com.br/noticia/vazamento-exclusivo-jogo" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Vazamento Exclusivo Revela Detalhes de Novo Título de Ação e Aventura</a>
+                            <a href="promocoes.html" class="hover:text-blue-400 transition duration-300">Novas Promoções Chegam para Esquentar Seu Fim de Semana Gamer!</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
-                            Imagens e informações confidenciais sobre um jogo ainda não anunciado agitam a comunidade gamer.
+                            Descontos em títulos populares e bundles exclusivos esperam por você. Não perca!
                         </p>
-                        <a href="https://f5games.com.br/noticia/vazamento-exclusivo-jogo" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
+                        <a href="promocoes.html" class="text-blue-400 hover:underline font-medium">Ver Promoções &rarr;</a>
                     </div>
                 </article>
 
-                <!-- Card de Notícia 6 - Recorde de E-Sports -->
+                <!-- Card de Notícia 6 - Lançamento de Hardware (Mantido como notícia) -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/059669/fff?text=Recorde+E-Sports" alt="[Image of Recorde em E-Sports]" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/059669/fff?text=NOVO+HARDWARE" alt="[Image of Novo Hardware Gamer]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Campeonato Mundial de E-Sports Bate Recorde de Audiência Global</a>
+                            <a href="#" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Chegou a Nova Geração de Placas de Vídeo: Desempenho Imbatível!</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
-                            O cenário competitivo continua crescendo, com milhões de espectadores acompanhando as finais de [Nome do Jogo].
+                            Conheça os detalhes e o que esperar das novas placas que prometem revolucionar sua experiência de jogo.
                         </p>
-                        <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
+                        <a href="#" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
                     </div>
                 </article>
             </div>
