--- a/noticias2.html
+++ b/noticias2.html
@@ -36,20 +36,22 @@
     </style>
 </head>
 <body class="antialiased">
-    <!-- Cabeçalho do Site (Copiado para consistência) -->
+    <!-- Cabeçalho do Site -->
     <header class="bg-gray-900 py-4 shadow-lg">
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
             <!-- Logo/Nome do Site -->
             <a href="index.html" class="mb-4 md:mb-0">
-                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="Logo F5 Games" class="h-12 w-auto rounded-md">
+                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="[Image of Logo F5 Games]" class="h-12 w-auto rounded-md">
             </a>
             <!-- Menu de Navegação -->
             <nav>
                 <ul class="flex flex-wrap justify-center space-x-6">
                     <li><a href="index.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Início</a></li>
-                    <li><a href="noticias.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Notícias</a></li>
-                    <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
-                    <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">E-Sports</a></li>
+                    <!-- Destaque para a página de Notícias (porque estamos nesta página) -->
+                    <li><a href="noticias.html" class="text-blue-400 text-lg font-semibold transition duration-300">Notícias</a></li>
+                    <!-- Links para Análises e Promoções estão corretos aqui -->
+                    <li><a href="analises.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
+                    <li><a href="promocoes.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Promoções</a></li>
                     <li><a href="contato.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Contato</a></li>
                 </ul>
             </nav>
@@ -77,7 +79,7 @@
                     </video>
                 </div>
                 <!-- Imagem do jogo The Alters -->
-                <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="Capa do jogo The Alters" class="w-full max-w-2xl mx-auto rounded-lg shadow-lg">
+                <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="[Image of Capa do jogo The Alters]" class="w-full max-w-2xl mx-auto rounded-lg shadow-lg">
                 <p class="text-gray-400 text-sm mt-2">Fonte da Imagem e Vídeo: 11 bit studios</p>
             </div>
             <p class="text-gray-300 text-lg leading-relaxed mb-6">
@@ -102,7 +104,7 @@
         </div>
     </main>
 
-    <!-- Rodapé do Site (Copiado para consistência) -->
+    <!-- Rodapé do Site -->
     <footer class="bg-gray-900 py-8 mt-12">
         <div class="container mx-auto px-4 text-center text-gray-400">
             <p>&copy; 2025 F5 Games. Todos os direitos reservados.</p>
