--- a/analises.html
+++ b/analises.html
@@ -25,7 +25,7 @@
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
             <!-- Logo/Nome do Site -->
             <a href="index.html" class="mb-4 md:mb-0">
-                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="Logo F5 Games" class="h-12 w-auto rounded-md">
+                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="[Image of Logo F5 Games]" class="h-12 w-auto rounded-md">
             </a>
             <!-- Menu de Navegação -->
             <nav>
@@ -34,7 +34,8 @@
                     <li><a href="noticias.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Notícias</a></li>
                     <!-- Destaque para a página de Análises -->
                     <li><a href="analises.html" class="text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
-                    <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">E-Sports</a></li>
+                    <!-- Link "Promoções" agora aponta para promocoes.html -->
+                    <li><a href="promocoes.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Promoções</a></li>
                     <li><a href="contato.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Contato</a></li>
                 </ul>
             </nav>
@@ -48,7 +49,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Card de Análise 1 - REMATCH -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/60A5FA/fff?text=REMATCH" alt="Capa de REMATCH" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/60A5FA/fff?text=REMATCH" alt="[Image of Capa de REMATCH]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <!-- O link para a análise de REMATCH -->
@@ -63,7 +64,7 @@
 
                 <!-- Exemplo de Card de Análise 2 (mantido como placeholder) -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/FBBF24/fff?text=ANÁLISE+JOGO+2" alt="Capa do Jogo 2" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/FBBF24/fff?text=ANÁLISE+JOGO+2" alt="[Image of Capa do Jogo 2]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="#" class="hover:text-blue-400 transition duration-300">Primeiras Impressões: [Nome do Jogo 2] Beta</a>
@@ -77,7 +78,7 @@
 
                 <!-- Exemplo de Card de Análise 3 (mantido como placeholder) -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/60A5FA/fff?text=ANÁLISE+JOGO+3" alt="Capa do Jogo 3" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/60A5FA/fff?text=ANÁLISE+JOGO+3" alt="[Image of Capa do Jogo 3]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="#" class="hover:text-blue-400 transition duration-300">Revisita: [Nome do Jogo 3] - Ainda Vale a Pena em 2025?</a>
